--- a/sala-app/src/main/resources/application.properties
+++ b/sala-app/src/main/resources/application.properties
@@ -1,16 +1,15 @@
 spring.application.name=sala-app
 
-
 # Connexion MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/snack_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/salamarket?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=your_password
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA
-spring.jpa.hibernate.ddl-auto=none
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Serveur
+# Port du serveur
 server.port=8080
