--- a/sala-front/package.json
+++ b/sala-front/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
+    "axios": "^1.9.0",
+    "bootstrap": "^5.3.5",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0"
   },
