--- a/sala-app/src/main/resources/application.properties
+++ b/sala-app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=sala-app
 
 # Connexion MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/salamarket?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/salamarket2?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
