--- a/sala-app/src/main/resources/application.properties
+++ b/sala-app/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=sala-app
 
 # Connexion MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/salamarket2?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://192.168.59.10:3306/demo_distrigest?useSSL=false&serverTimezone=UTC
+spring.datasource.username=salamarket
+spring.datasource.password=salamarketlille
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
